# medvisnet

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  infer.py  pyproject.toml  requirements.txt  setup.py  test.py  train.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
config/: infer.yaml  test.yaml  train.yaml
config/data/: data.yaml
config/experiment/: vit_freeze.yaml
config/logging/: mlflow.yaml
config/model/: vit.yaml
config/trainer/: test_trainer.yaml  train_trainer.yaml
inference_cpp/: CMakeLists.txt
inference_cpp/include/: inferencer.h
inference_cpp/src/: inferencer.cpp  main.cpp
results/testing/base_vit_b_16/: metrics.txt
results/testing/base_vit_b_32/: metrics.txt
src/data/: dataloader.py  dataset.py
src/inference/: base_inferencer.py  factories.py  onnx_inferencer.py  torch_inferencer.py
src/models/: vit.py
src/training/: base_trainer.py  callbacks.py  factories.py  metrics.py  trainer.py
src/utils/: checkpoint.py  exporter.py  helper.py  logger.py
tests/: conftest.py  test_base_trainer.py  test_callbacks.py  test_checkpoint.py  test_dataloader.py  test_dataset.py  test_inferencer.py  test_metrics.py  test_trainer.py  test_vit.py  tests_dataset.py
